--- a/public/rules.html
+++ b/public/rules.html
@@ -281,17 +281,25 @@
         </div>
 
         <h3>Возможные действия</h3>
-        <p>В разные моменты хода доступны все или некоторые из следующих действий. Чтобы выполнить действие, нужно зажать соответствующую ему клавишу клавиатуры и переместить нужную фишку с помощью мышки.</p>
+        <p>В разные моменты хода доступны все или некоторые из следующих действий. Чтобы выполнить действие, нужно зажать соответствующую ему клавишу клавиатуры и переместить нужную фишку с помощью мышки. Также можно просто переместить нужный корабль с помощью мышки, не зажимая клавишу — тогда появится меню с выбором из возможных действий.</p>
         <table class="action-table">
             <tr><th>Клавиша</th><th>Название действия</th><th>Описание действия</th></tr>
             <tr><td><strong>M</strong></td><td>Перемещение</td><td>Передвижение фишки на соседнюю (не по диагонали) свободную клетку</td></tr>
             <tr><td><strong>A</strong></td><td>Атака</td><td>Выбранная фишка атакует соседнюю (не по диагонали) фишку противника</td></tr>
             <tr><td><strong>S</strong></td><td>Выстрел</td><td>Смотрите описание фишек</td></tr>
             <tr><td><strong>E</strong></td><td>Взрыв</td><td>Смотрите описание фишек</td></tr>
+            <tr><td><strong>Space</strong></td><td>Пропуск хода</td><td>Пропустить фазу атаки</td></tr>
         </table>
+        <p>Также доступны вспомогательные инструменты, которые активируются, если зажать клавишу на клавиатуре</p>
+        <table class="action-table">
+            <tr><th>Клавиша</th><th>Описание действия</th></tr>
+            <tr><td><strong>Shift</strong></td><td>Открывет панель, которая показывает сколько кораблей осталось у вас и у противника</td></tr>
+            <tr><td><strong>Ctrl</strong></td><td>Показывает маршрут, которым следовала фишка, при наведении на нее</td></tr>
+            <tr><td><strong>Alt</strong></td><td>Показывает правила, касающиеся конкретной фишки, при наведении на нее</td></tr>
+        </table>
+        <p>На мобильных устройствах вместо Ctrl и Alt кликните один или два раза на интересующий корабль.</p>
 
         <h3>Список фаз игры</h3>
-        <div class="phase-list">
             <p>Ход игрока состоит из основной (move, shoot or attack) и, возможно, дополнительной (attack or skip) фаз.</p>
             <p>В основную фазу можно выполнять любые действия. Если игрок в основную фазу выбрал перемещение фишки, то он получает возможность действовать в дополнительную фазу, в которой можно только атаковать или взрывать. Дополнительную фазу можно пропустить нажатием кнопки Пробел. В случае, если игрок удачно произвел атаку или выстрел, то он немедленно начинает дополнительный ход.</p>
             <p><strong>Надпись справа вверху помогает понять, в какой фазе игры вы находитесь:</strong></p>
@@ -302,7 +310,6 @@
                 <dt>Attack or skip</dt><dd>В эту фазу можно только атаковать и взрывать, если хотите, можно ее пропустить, нажав Пробел</dd>
                 <dt>Select you block</dt><dd>Вам нужно заявить блок, нажав на одну из кнопок с названиями блоков в правой панели</dd>
             </dl>
-        </div>
 
         <h3>Подробнее об атаке: блоки</h3>
         <p>Два корабля (фишки) одного типа стоящие рядом (не по диагонали) образуют блок из двух кораблей. Если рядом с одним из них (опять же не по диагонали) стоит третий корабль, то получается блок из трёх кораблей (ясно, что тройной блок может стоять или «линией» или «уголком»). Блоков больше трёх кораблей не бывает. Не все типы кораблей могут образовывать блоки, а <strong>Рейдер</strong> <img src="figures/Rd.png" alt="Рейдер" style="width: 20px; height: 20px; vertical-align: middle;"> может образовывать блоки не только с другими <strong>Рейдерами</strong>, но  и с фишками других типов. (подробности будут дальше).</p>
