--- a/public/rules.html
+++ b/public/rules.html
@@ -271,17 +271,17 @@
         <h1>Морской бой по-физтеховски - Правила игры</h1>
 
         <h2>Основные правила</h2>
-        <p>В Морской бой по-физтеховски играют два игрока. Игра ведется на квадратном клетчатом поле 14 на 14 клеток. Оба игрока имеют одинаковые наборы специальных фишек, изображения на которых видны самому игроку, но не видны противнику. То есть каждый игрок видит свои фишки и положение - но не тип - фишек соперника. Перед началом игры игроки расставляют свои наборы фишек произвольным образом на первых 3-х линиях поля (друг напротив друга). После этого игроки по очереди совершают ходы.</p>
+        <p>В Морской бой по-физтеховски играют два игрока. Игра ведется на квадратном клетчатом поле 14 на 14 клеток. Оба игрока имеют одинаковые наборы фишек. Каждый игрок видит свои фишки и положение - но не тип - фишек соперника. Перед началом игры игроки расставляют свои наборы фишек произвольным образом на первых 5-и линиях поля (друг напротив друга). После этого игроки по очереди совершают ходы.</p>
         <div class="ship-item">
             <img src="figures/F.png" alt="Форт" class="ship-image">
             <div class="ship-description">
                 <div class="ship-name">Цель игры</div>
-                <p>Уничтожить или захватить обе фишки <strong>Форт</strong> противника.</p>
+                <p>Уничтожить или захватить оба <strong>Фортa</strong> противника.</p>
             </div>
         </div>
 
         <h3>Возможные действия</h3>
-        <p>В разные моменты хода доступны все или некоторые из следующих действий. Чтобы выполнить действие, нужно зажать соответствующую ему клавишу клавиатуры и переместить нужную фишку с помощью мышки. Также можно просто переместить нужный корабль с помощью мышки, не зажимая клавишу — тогда появится меню с выбором из возможных действий.</p>
+        <p>В разные моменты хода доступны все или некоторые из следующих действий. Чтобы выполнить действие, нужно зажать соответствующую ему клавишу клавиатуры и переместить нужную фишку с помощью мышки. Также можно просто переместить нужный корабль с помощью мышки, не зажимая клавишу. Если подходящее действие только одно, оно выполнится автоматически. Если подходящих действий несколько, то появится меню с выбором.</p>
         <table class="action-table">
             <tr><th>Клавиша</th><th>Название действия</th><th>Описание действия</th></tr>
             <tr><td><strong>M</strong></td><td>Перемещение</td><td>Передвижение фишки на соседнюю (не по диагонали) свободную клетку</td></tr>
