--- a/public/rules.html
+++ b/public/rules.html
@@ -672,7 +672,7 @@
           style="width: 20px; height: 20px; vertical-align: middle"
         />
         может образовывать блоки не только с другими <strong>Рейдерами</strong>, но и с фишками
-        других типов. (подробности будут дальше).
+        других типов. (подробности будут дальше). Сила блока равна достоинству одного корабля умноженному на число кораблей в блоке. Она зависит только от того, как блок заявлен, а не от того, какие корабли реально входят в блок.
       </p>
       <p>
         Во время атаки игрок выбирает какой-нибудь корабль противника как цель атаки. Противник
