--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#000000">
-    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#1e3c72">
     <link rel="shortcut icon" href="/logo_small.png">
     <title>Phystech Seabattle</title>
   </head>
