--- a/public/rules.html
+++ b/public/rules.html
@@ -459,18 +459,13 @@
         <div class="ship-item">
           <div
             style="
-              width: 48px;
-              height: 48px;
-              margin-right: 16px;
-              border: 2px solid var(--border-light);
-              border-radius: var(--border-radius);
-              background: var(--surface-2);
               display: flex;
               align-items: center;
               justify-content: center;
               font-size: 24px;
               color: #ef4444;
             "
+            class="ship-image"
           >
             ★
           </div>
@@ -486,18 +481,13 @@
         <div class="ship-item">
           <div
             style="
-              width: 48px;
-              height: 48px;
-              margin-right: 16px;
-              border: 2px solid var(--border-light);
-              border-radius: var(--border-radius);
-              background: var(--surface-2);
               display: flex;
               align-items: center;
               justify-content: center;
               font-size: 14px;
               color: var(--text-secondary);
             "
+            class="ship-image"
           >
             ABC
           </div>
@@ -512,9 +502,7 @@
       </div>
       <p><strong>Как использовать:</strong></p>
       <ul>
-        <li>
-          <strong>На компьютере:</strong> Кликните на корабль противника 
-        </li>
+        <li><strong>На компьютере:</strong> Кликните на корабль противника</li>
         <li>
           <strong>На мобильном:</strong> Кликните три раза на корабль противника: 1-й клик
           показывает маршрут, 2-й — подсказку, 3-й — открывает редактор меток
@@ -672,7 +660,9 @@
           style="width: 20px; height: 20px; vertical-align: middle"
         />
         может образовывать блоки не только с другими <strong>Рейдерами</strong>, но и с фишками
-        других типов. (подробности будут дальше). Сила блока равна достоинству одного корабля умноженному на число кораблей в блоке. Она зависит только от того, как блок заявлен, а не от того, какие корабли реально входят в блок.
+        других типов. (подробности будут дальше). Сила блока равна достоинству одного корабля
+        умноженному на число кораблей в блоке. Она зависит только от того, как блок заявлен, а не от
+        того, какие корабли реально входят в блок.
       </p>
       <p>
         Во время атаки игрок выбирает какой-нибудь корабль противника как цель атаки. Противник
