--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#1e3c72">
-    <link rel="shortcut icon" href="/logo_small.png">
+    <meta name="theme-color" content="#1e3c72" />
+    <link rel="shortcut icon" href="/logo_small.png" />
     <title>Phystech Seabattle</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+    <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
